# dowExpriment

./: .gitignore  CMakeLists.txt  DowExperimentDataMonitor_zh_CN.ts  dow.mdj  easytablemodel.cpp  easytablemodel.h  main.cpp  main.qml  qml.qrc  todos.cpp
contents/: Alarm.qml  EventList.qml  EventTableEasyTable.qml  EventTableFromControl.qml  EventTableView.qml  Group_label_textinput.qml  HistroyDataWindow.qml  HwwButton.qml  HwwCanvas.qml  InfoLabel.qml  LogoWindow.qml  MainWindow.qml  ParaItem.qml  PosDisplay.qml  ProcessRecordWindow.qml  RealTimeCurveWindow.qml  SetParaWindow.qml  Test.qml  Window_adjust_anolog_value_para_set.qml  Window_opr_manage.qml  chart_history.qml  infoList.qml  recordVal_tableview.qml  window_adjust_anolog_value_para_set.qml  workUI.qml
gtest/: .gitignore  CMakeLists.txt  backendmodel.qmodel  dow.mdj  main.cpp  test_alarm.cpp  test_database.cpp  test_dowInit.cpp  test_dowInit.h  test_getplcval.cpp  test_hwwUtility.cpp  test_infoListModel.cpp  test_listView_ex.cpp  test_mainBackend.cpp  test_models.cpp  test_myModbus.cpp  test_oper.cpp  test_outPut_state.cpp  test_para_with_plc.cpp  test_realTimeCurve.cpp  test_realtimecurve.h  test_realtimedisplay.h  test_sensor.cpp  test_setParaBackend.cpp  test_signal_vals.cpp  todos.cpp  tst_cs1.h  tst_mainBackend.h
learn/: AnimationEx1.qml  AnimationEx2.qml  Ball.qml  Ball1.qml  Canvas2.qml  Myanimator.qml  TestBall.qml  canvas1.qml  qmlChart.qml  qmlchart2.qml  scale01.qml  state1.qml
lib/: CMakeLists.txt  My_Modbus.cpp  My_Modbus.h  Sensor.cpp  Sensor.h  backend_adjust_analog_set.cpp  backend_adjust_analog_set.h  backend_history_chart.cpp  backend_history_chart.h  backend_oper_manage.cpp  backend_oper_manage.h  db_adjust_analog.cpp  db_adjust_analog.h  db_experiment.cpp  db_experiment.h  db_oper.cpp  db_oper.h  db_signal_vals.cpp  db_signal_vals.h  dowdatabase.cpp  dowdatabase.h  dowinfolist.cpp  dowinfolist.h  dowinit.cpp  dowinit.h  experiment.cpp  experiment.h  getplcval.cpp  getplcval.h  hwwalarm.cpp  hwwalarm.h  hwwutility.cpp  hwwutility.h  infolist.cpp  infolist.h  lib.h  mainbackend.cpp  mainbackend.h  mymodbus.cpp  mymodbus.h  (+16 more)
